@@ -1,3 +1,8 @@
+2004-04-29  Paolo Carlini  <pcarlini@suse.de>
+
+	* src/locale.cc (locale::operator==): Always avoid constructing
+	locale::name(), directly compare pairs of _M_names.
+
 2004-04-26  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/bits/istream.tcc: Fix comment.
